# frodokem

./: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
components/frodokem/: CMakeLists.txt  Kconfig  frodo_macrify.c  frodo_macrify.h  frodokem.c  frodokem.h  kem.c  noise.c  util.c
components/frodokem/aes/: aes.c  aes.h
main/: main.c
